superbadges/superbadge_object_relationships_sbu/force-app/main/default/objects/Artist__c/Artist__c.object-meta.xml
<CustomObject>
    <label>Artist</label>
    <nameField>
        <label>Artist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>