superbadges/superbadge_object_relationships_sbu/force-app/main/default/objects/Artist__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Band</fullName>
            </value>
            <value>
                <fullName>Bass Tech</fullName>
            </value>
            <value>
                <fullName>Dancer</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Drum Tech</fullName>
            </value>
            <value>
                <fullName>Front of House</fullName>
            </value>
            <value>
                <fullName>Guitar Tech</fullName>
            </value>
            <value>
                <fullName>Keyboard Tech</fullName>
            </value>
            <value>
                <fullName>Lighting Designer</fullName>
            </value>
            <value>
                <fullName>Lighting Director</fullName>
            </value>
            <value>
                <fullName>Lighting Tech</fullName>
            </value>
            <value>
                <fullName>Merchandise Crew</fullName>
            </value>
            <value>
                <fullName>Monitor Engineer</fullName>
            </value>
            <value>
                <fullName>Production Manager</fullName>
            </value>
            <value>
                <fullName>Pyrotechnician</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Stage Managers</fullName>
            </value>
            <value>
                <fullName>Tour Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>